--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ out
 .externalNativeBuild
 .cxx
 local.properties
+.idea/shelf
+.idea/checkstyle-idea.xml
+.idea/inspectionProfiles
+.idea/vcs.xml
+.idea/gradle.xml
+.idea/compiler.xml
