--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
             tools:targetApi="31">
         <activity
                 android:name=".SelectEventActivity"
+                android:screenOrientation="sensorPortrait" tools:ignore="DiscouragedApi, LockedOrientationActivity"
                 android:exported="false"/>
         <activity
                 android:name=".SelectTournamentActivity"
+                android:screenOrientation="sensorPortrait" tools:ignore="DiscouragedApi, LockedOrientationActivity"
                 android:exported="false"/> <!-- Sets LoginActivity as the entry point to the app. -->
         <activity
                 android:name=".LoginActivity"
@@ -32,7 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity> <!-- Declares MainActivity. -->
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="sensorPortrait" tools:ignore="DiscouragedApi, LockedOrientationActivity"/>
+
     </application>
 
 </manifest>
